--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "immer": "^9.0.21",
